# created on 2021/6/2
# author @zoloypzuo

add_subdirectory(ECS)
#add_subdirectory(ImGui)
add_subdirectory(Input)
add_subdirectory(Interface)
add_subdirectory(LuaScript)
add_subdirectory(Math)
#add_subdirectory(Physics)
add_subdirectory(Profiler)
add_subdirectory(Resource)
add_subdirectory(RHI)
add_subdirectory(Window)

set_target_properties(ECS PROPERTIES FOLDER "Core")
#set_target_properties(ImGui PROPERTIES FOLDER "Core")
set_target_properties(Input PROPERTIES FOLDER "Core")
set_target_properties(Interface PROPERTIES FOLDER "Core")
set_target_properties(Math PROPERTIES FOLDER "Core")
set_target_properties(LuaScript PROPERTIES FOLDER "Core")
#set_target_properties(Physics PROPERTIES FOLDER "Core")
set_target_properties(Profiler PROPERTIES FOLDER "Core")
set_target_properties(Resource PROPERTIES FOLDER "Core")
set_target_properties(RHI PROPERTIES FOLDER "Core")
set_target_properties(Window PROPERTIES FOLDER "Core")
